not sure reverting I think

--- a/single_file.html
+++ b/single_file.html
@@ -1345,7 +1345,7 @@ there.
     </div>
 </div>
 </div>
-    <div class="row offset-by-one ten columns"><div class="suite" id="suite_wpscJ">
+    <div class="row offset-by-one ten columns"><div class="suite" id="suite_sRZ7n">
     <button class="suite--failure u-full-width" onclick="cta.contract.local.suite(this.parentElement)">
         <span class="suite__name u-pull-left">Multi</span>
         <span class="suite__info u-pull-right">tests: 3</span>
@@ -1353,7 +1353,7 @@ there.
         <span class="suite__info u-pull-right">time: 0.0160106</span>
     </button>
     <div class="suite__contents">
-        <div class="suite__properties"><div id=properties_TOI8k class="properties">
+        <div class="suite__properties"><div id=properties_LSCaF class="properties">
     <button class="properties__title u-full-width" onclick="cta.contract.local.properties(this.parentElement)">
         <span class="u-pull-left">Properties</span>
     </button>
@@ -1363,19 +1363,19 @@ there.
             <th>VALUE</th>
         </thead>
         <tbody>
-            <tr id=property_Fwxrn>
+            <tr id=property_80O2P>
     <td><b>flag-type</b></td>
     <td>bug</td>
 </tr>
-<tr id=property_0dN2l>
+<tr id=property_gSo83>
     <td><b>flag-content</b></td>
     <td>APPLICATION DEFECT</td>
 </tr>
-<tr id=property_kUUwK>
+<tr id=property_xO2km>
     <td><b>Has a name</b></td>
     <td>true</td>
 </tr>
-<tr id=property_Jivm1>
+<tr id=property_RvSmx>
     <td><b>URL</b></td>
     <td>&#x2F;hunter&#x2F;overall_test.go</td>
 </tr>
@@ -1383,7 +1383,7 @@ there.
     </table>
 </div>
 
-<div id=properties_tabaV class="properties">
+<div id=properties_AjcXD class="properties">
     <button class="properties__title u-full-width" onclick="cta.contract.local.properties(this.parentElement)">
         <span class="u-pull-left">Properties</span>
     </button>
@@ -1393,7 +1393,7 @@ there.
             <th>VALUE</th>
         </thead>
         <tbody>
-            <tr id=property_JXNyz>
+            <tr id=property_1v16Q>
     <td><b>even</b></td>
     <td>more</td>
 </tr>
@@ -1401,28 +1401,28 @@ there.
     </table>
 </div>
 </div>
-        <div class="suite__tests"><div class="test" id="test_2q0Ho">
+        <div class="suite__tests"><div class="test" id="test_pApso">
     <button class="test__name test--error u-full-width" onclick="cta.contract.local.test(this.parentElement)">
         <span class="u-pull-left">Is An Error</span>
         <span class="u-pull-right">0.00075</span>
     </button>
-    <div class="test__messages"><div id="message_5bMhJ" class="test__message">java.lang.RuntimeException: There was an error</div>
-<div id="message_2Epff" class="test__message">java.lang.RuntimeException: There was an error</div></div>
+    <div class="test__messages"><div id="message_l8bCt" class="test__message">java.lang.RuntimeException: There was an error</div>
+<div id="message_WtuIn" class="test__message">java.lang.RuntimeException: There was an error</div></div>
 </div>
 
-<div class="test" id="test_7kJYO">
+<div class="test" id="test_LSdq5">
     <button class="test__name test--failure u-full-width" onclick="cta.contract.local.test(this.parentElement)">
         <span class="u-pull-left">It Is A Failure</span>
         <span class="u-pull-right">0.012011200000000001</span>
     </button>
-    <div class="test__messages"><div id="message_Zipz1" class="test__message">FILENAME:XX
+    <div class="test__messages"><div id="message_RgqpB" class="test__message">FILENAME:XX
 Expected
     <string>: Luke
 to equal
     <string>: luke</div></div>
 </div>
 
-<div class="test" id="test_hnYVj">
+<div class="test" id="test_E3FOV">
     <button class="test__name test--passed u-full-width" onclick="cta.contract.local.test(this.parentElement)">
         <span class="u-pull-left">It Is A Pass</span>
         <span class="u-pull-right">0.000625</span>
@@ -1430,19 +1430,19 @@ to equal
     
 </div>
 
-<div class="test" id="test_yYECx">
+<div class="test" id="test_yvrO6">
     <button class="test__name test--skipped u-full-width" onclick="cta.contract.local.test(this.parentElement)">
         <span class="u-pull-left">It Is Skipped</span>
         <span class="u-pull-right">0</span>
     </button>
-    <div class="test__messages"><div id="message_oaWSp" class="test__message">This is a message</div>
-<div id="message_bI1sd" class="test__message">This is a message</div></div>
+    <div class="test__messages"><div id="message_NP4MO" class="test__message">This is a message</div>
+<div id="message_b8eqx" class="test__message">This is a message</div></div>
 </div>
 </div>
     </div>
 </div>
 </div>
-    <script type="text/javascript">var suites = [{"id":"suite_wpscJ","type":"failure","name":"Multi","time":"0.0160106","tests":"3","failures":"1","properties":[{"id":"properties_TOI8k","props":[{"name":"flag-type","value":"bug","id":"property_Fwxrn"},{"name":"flag-content","value":"APPLICATION DEFECT","id":"property_0dN2l"},{"name":"Has a name","value":"true","id":"property_kUUwK"},{"name":"URL","value":"/hunter/overall_test.go","id":"property_Jivm1"}]},{"id":"properties_tabaV","props":[{"name":"even","value":"more","id":"property_JXNyz"}]}],"testCases":[{"id":"test_2q0Ho","time":"0.00075","name":"Is An Error","type":"error","messages":[{"id":"message_5bMhJ","message":"java.lang.RuntimeException: There was an error"},{"id":"message_2Epff","message":"java.lang.RuntimeException: There was an error"}]},{"id":"test_7kJYO","time":"0.012011200000000001","name":"It Is A Failure","type":"failure","messages":[{"id":"message_Zipz1","message":"FILENAME:XX\nExpected\n    <string>: Luke\nto equal\n    <string>: luke"}]},{"id":"test_hnYVj","time":"0.000625","name":"It Is A Pass","type":"passed"},{"id":"test_yYECx","time":"0","name":"It Is Skipped","type":"skipped","messages":[{"id":"message_oaWSp","message":"This is a message"},{"id":"message_bI1sd","message":"This is a message"}]}]}]
+    <script type="text/javascript">var suites = [{"id":"suite_sRZ7n","type":"failure","name":"Multi","time":"0.0160106","tests":"3","failures":"1","properties":[{"id":"properties_LSCaF","props":[{"name":"flag-type","value":"bug","id":"property_80O2P"},{"name":"flag-content","value":"APPLICATION DEFECT","id":"property_gSo83"},{"name":"Has a name","value":"true","id":"property_xO2km"},{"name":"URL","value":"/hunter/overall_test.go","id":"property_RvSmx"}]},{"id":"properties_AjcXD","props":[{"name":"even","value":"more","id":"property_1v16Q"}]}],"testCases":[{"id":"test_pApso","time":"0.00075","name":"Is An Error","type":"error","messages":[{"id":"message_l8bCt","message":"java.lang.RuntimeException: There was an error"},{"id":"message_WtuIn","message":"java.lang.RuntimeException: There was an error"}]},{"id":"test_LSdq5","time":"0.012011200000000001","name":"It Is A Failure","type":"failure","messages":[{"id":"message_RgqpB","message":"FILENAME:XX\nExpected\n    <string>: Luke\nto equal\n    <string>: luke"}]},{"id":"test_E3FOV","time":"0.000625","name":"It Is A Pass","type":"passed"},{"id":"test_yvrO6","time":"0","name":"It Is Skipped","type":"skipped","messages":[{"id":"message_NP4MO","message":"This is a message"},{"id":"message_b8eqx","message":"This is a message"}]}]}]
 function createToggleDisplay(by) {
     return function(element) {
         var isHidden = element.className.indexOf(' hide--' + by) !== -1
