can do single properties

--- a/single_file.html
+++ b/single_file.html
@@ -1209,7 +1209,9 @@ there.
 }
 
 .test,
-.option {
+.option,
+.suite__properties,
+.properties--single {
     width: 96%;
     margin-left: 2%;
     margin-right: 2%;
@@ -1346,7 +1348,7 @@ there.
     </div>
 </div>
 </div>
-    <div class="row offset-by-one ten columns"><div class="suite" id="suite_qGFdh">
+    <div class="row offset-by-one ten columns"><div class="suite" id="suite_qX3L3">
     <button class="suite--failure u-full-width" onclick="cta.contract.local.suite(this.parentElement)">
         <span class="suite__name u-pull-left">Multi</span>
         <span class="suite__info u-pull-right">tests: 3</span>
@@ -1354,7 +1356,11 @@ there.
         <span class="suite__info u-pull-right">time: 0.0160106</span>
     </button>
     <div class="suite__contents">
-        <div class="suite__properties"><div id=properties_axYol class="properties">
+        <div class="suite__properties">
+    <button class="properties__title u-full-width" onclick="cta.contract.local.properties(this.parentElement)">
+        <span class="u-pull-left">MULTIPLE PROPERTIES</span>
+    </button>
+    <div id=properties_WUrXt class="properties">
     <button class="properties__title u-full-width" onclick="cta.contract.local.properties(this.parentElement)">
         <span class="u-pull-left">Properties</span>
     </button>
@@ -1364,19 +1370,19 @@ there.
             <th>VALUE</th>
         </thead>
         <tbody>
-            <tr id=property_AwPP4>
+            <tr id=property_pGS16>
     <td><b>flag-type</b></td>
     <td>bug</td>
 </tr>
-<tr id=property_RQzSq>
+<tr id=property_upQZa>
     <td><b>flag-content</b></td>
     <td>APPLICATION DEFECT</td>
 </tr>
-<tr id=property_0Y6GC>
+<tr id=property_Hu0Sl>
     <td><b>Has a name</b></td>
     <td>true</td>
 </tr>
-<tr id=property_Yaz35>
+<tr id=property_M0Ord>
     <td><b>URL</b></td>
     <td>&#x2F;hunter&#x2F;overall_test.go</td>
 </tr>
@@ -1384,7 +1390,7 @@ there.
     </table>
 </div>
 
-<div id=properties_mDOK0 class="properties">
+<div id=properties_9T72a class="properties">
     <button class="properties__title u-full-width" onclick="cta.contract.local.properties(this.parentElement)">
         <span class="u-pull-left">Properties</span>
     </button>
@@ -1394,36 +1400,37 @@ there.
             <th>VALUE</th>
         </thead>
         <tbody>
-            <tr id=property_HRSRq>
+            <tr id=property_19k7y>
     <td><b>even</b></td>
     <td>more</td>
 </tr>
         </tbody>
     </table>
 </div>
+
 </div>
-        <div class="suite__tests"><div class="test" id="test_FbsBc">
+        <div class="suite__tests"><div class="test" id="test_9bSvb">
     <button class="test__name test--error u-full-width" onclick="cta.contract.local.test(this.parentElement)">
         <span class="u-pull-left">Is An Error</span>
         <span class="u-pull-right">0.00075</span>
     </button>
-    <div class="test__messages"><div id="message_6GFHi" class="test__message">java.lang.RuntimeException: There was an error</div>
-<div id="message_EbqLB" class="test__message">java.lang.RuntimeException: There was an error</div></div>
+    <div class="test__messages"><div id="message_9rnX7" class="test__message">java.lang.RuntimeException: There was an error</div>
+<div id="message_nSAr0" class="test__message">java.lang.RuntimeException: There was an error</div></div>
 </div>
 
-<div class="test" id="test_xcKJQ">
+<div class="test" id="test_f9Pr4">
     <button class="test__name test--failure u-full-width" onclick="cta.contract.local.test(this.parentElement)">
         <span class="u-pull-left">It Is A Failure</span>
         <span class="u-pull-right">0.012011200000000001</span>
     </button>
-    <div id="message_In6F8" class="test__message--single">FILENAME:XX
+    <div id="message_kq6Dd" class="test__message--single">FILENAME:XX
 Expected
     <string>: Luke
 to equal
     <string>: luke</div>
 </div>
 
-<div class="test" id="test_gaibW">
+<div class="test" id="test_BtjH8">
     <button class="test__name test--passed u-full-width" onclick="cta.contract.local.test(this.parentElement)">
         <span class="u-pull-left">It Is A Pass</span>
         <span class="u-pull-right">0.000625</span>
@@ -1431,19 +1438,19 @@ to equal
     
 </div>
 
-<div class="test" id="test_tY1z8">
+<div class="test" id="test_ma2ql">
     <button class="test__name test--skipped u-full-width" onclick="cta.contract.local.test(this.parentElement)">
         <span class="u-pull-left">It Is Skipped</span>
         <span class="u-pull-right">0</span>
     </button>
-    <div class="test__messages"><div id="message_n3wP5" class="test__message">This is a message</div>
-<div id="message_5JbWl" class="test__message">This is a message</div></div>
+    <div class="test__messages"><div id="message_9S6iE" class="test__message">This is a message</div>
+<div id="message_vSWEs" class="test__message">This is a message</div></div>
 </div>
 </div>
     </div>
 </div>
 </div>
-    <script type="text/javascript">var suites = [{"id":"suite_qGFdh","type":"failure","name":"Multi","time":"0.0160106","tests":"3","failures":"1","properties":[{"id":"properties_axYol","props":[{"name":"flag-type","value":"bug","id":"property_AwPP4"},{"name":"flag-content","value":"APPLICATION DEFECT","id":"property_RQzSq"},{"name":"Has a name","value":"true","id":"property_0Y6GC"},{"name":"URL","value":"/hunter/overall_test.go","id":"property_Yaz35"}]},{"id":"properties_mDOK0","props":[{"name":"even","value":"more","id":"property_HRSRq"}]}],"testCases":[{"id":"test_FbsBc","time":"0.00075","name":"Is An Error","type":"error","messages":[{"id":"message_6GFHi","message":"java.lang.RuntimeException: There was an error"},{"id":"message_EbqLB","message":"java.lang.RuntimeException: There was an error"}]},{"id":"test_xcKJQ","time":"0.012011200000000001","name":"It Is A Failure","type":"failure","messages":[{"id":"message_In6F8","message":"FILENAME:XX\nExpected\n    <string>: Luke\nto equal\n    <string>: luke"}]},{"id":"test_gaibW","time":"0.000625","name":"It Is A Pass","type":"passed"},{"id":"test_tY1z8","time":"0","name":"It Is Skipped","type":"skipped","messages":[{"id":"message_n3wP5","message":"This is a message"},{"id":"message_5JbWl","message":"This is a message"}]}]}]
+    <script type="text/javascript">var suites = [{"id":"suite_qX3L3","type":"failure","name":"Multi","time":"0.0160106","tests":"3","failures":"1","properties":[{"id":"properties_WUrXt","props":[{"name":"flag-type","value":"bug","id":"property_pGS16"},{"name":"flag-content","value":"APPLICATION DEFECT","id":"property_upQZa"},{"name":"Has a name","value":"true","id":"property_Hu0Sl"},{"name":"URL","value":"/hunter/overall_test.go","id":"property_M0Ord"}]},{"id":"properties_9T72a","props":[{"name":"even","value":"more","id":"property_19k7y"}]}],"testCases":[{"id":"test_9bSvb","time":"0.00075","name":"Is An Error","type":"error","messages":[{"id":"message_9rnX7","message":"java.lang.RuntimeException: There was an error"},{"id":"message_nSAr0","message":"java.lang.RuntimeException: There was an error"}]},{"id":"test_f9Pr4","time":"0.012011200000000001","name":"It Is A Failure","type":"failure","messages":[{"id":"message_kq6Dd","message":"FILENAME:XX\nExpected\n    <string>: Luke\nto equal\n    <string>: luke"}]},{"id":"test_BtjH8","time":"0.000625","name":"It Is A Pass","type":"passed"},{"id":"test_ma2ql","time":"0","name":"It Is Skipped","type":"skipped","messages":[{"id":"message_9S6iE","message":"This is a message"},{"id":"message_vSWEs","message":"This is a message"}]}]}]
 function createToggleDisplay(by) {
     return function(element) {
         var isHidden = element.className.indexOf(' hide--' + by) !== -1
