cleaning around test messages

--- a/single_file.html
+++ b/single_file.html
@@ -1348,8 +1348,8 @@ there.
     </div>
 </div>
 </div>
-    <div class="row offset-by-one ten columns"><div class="suite" id="suite_qX3L3">
-    <button class="suite--failure u-full-width" onclick="cta.contract.local.suite(this.parentElement)">
+    <div class="row offset-by-one ten columns"><div class="suite" id="suite_QRfv6">
+    <button class="suite--failure u-full-width flat" onclick="cta.contract.local.suite(this.parentElement)">
         <span class="suite__name u-pull-left">Multi</span>
         <span class="suite__info u-pull-right">tests: 3</span>
         <span class="suite__info u-pull-right">failures: 1</span>
@@ -1360,7 +1360,8 @@ there.
     <button class="properties__title u-full-width" onclick="cta.contract.local.properties(this.parentElement)">
         <span class="u-pull-left">MULTIPLE PROPERTIES</span>
     </button>
-    <div id=properties_WUrXt class="properties">
+    <div class="properties__list">
+        <div id=properties_iMwIl class="properties">
     <button class="properties__title u-full-width" onclick="cta.contract.local.properties(this.parentElement)">
         <span class="u-pull-left">Properties</span>
     </button>
@@ -1370,19 +1371,19 @@ there.
             <th>VALUE</th>
         </thead>
         <tbody>
-            <tr id=property_pGS16>
+            <tr id=property_QUZ0Y>
     <td><b>flag-type</b></td>
     <td>bug</td>
 </tr>
-<tr id=property_upQZa>
+<tr id=property_3In56>
     <td><b>flag-content</b></td>
     <td>APPLICATION DEFECT</td>
 </tr>
-<tr id=property_Hu0Sl>
+<tr id=property_UmsHo>
     <td><b>Has a name</b></td>
     <td>true</td>
 </tr>
-<tr id=property_M0Ord>
+<tr id=property_e7RGX>
     <td><b>URL</b></td>
     <td>&#x2F;hunter&#x2F;overall_test.go</td>
 </tr>
@@ -1390,7 +1391,7 @@ there.
     </table>
 </div>
 
-<div id=properties_9T72a class="properties">
+<div id=properties_RRaAJ class="properties">
     <button class="properties__title u-full-width" onclick="cta.contract.local.properties(this.parentElement)">
         <span class="u-pull-left">Properties</span>
     </button>
@@ -1400,7 +1401,7 @@ there.
             <th>VALUE</th>
         </thead>
         <tbody>
-            <tr id=property_19k7y>
+            <tr id=property_vnbaP>
     <td><b>even</b></td>
     <td>more</td>
 </tr>
@@ -1408,49 +1409,50 @@ there.
     </table>
 </div>
 
+    </div>
 </div>
-        <div class="suite__tests"><div class="test" id="test_9bSvb">
-    <button class="test__name test--error u-full-width" onclick="cta.contract.local.test(this.parentElement)">
+        <div class="suite__tests"><div class="test" id="test_VLkDY">
+    <button class="test__name test--error u-full-width flat" onclick="cta.contract.local.test(this.parentElement)">
         <span class="u-pull-left">Is An Error</span>
         <span class="u-pull-right">0.00075</span>
     </button>
-    <div class="test__messages"><div id="message_9rnX7" class="test__message">java.lang.RuntimeException: There was an error</div>
-<div id="message_nSAr0" class="test__message">java.lang.RuntimeException: There was an error</div></div>
+    <div class="test__messages"><div id="message_acPzu" class="test__message">java.lang.RuntimeException: There was an error</div>
+<div id="message_6bawB" class="test__message">java.lang.RuntimeException: There was an error</div></div>
 </div>
 
-<div class="test" id="test_f9Pr4">
-    <button class="test__name test--failure u-full-width" onclick="cta.contract.local.test(this.parentElement)">
+<div class="test" id="test_a0vHr">
+    <button class="test__name test--failure u-full-width flat" onclick="cta.contract.local.test(this.parentElement)">
         <span class="u-pull-left">It Is A Failure</span>
         <span class="u-pull-right">0.012011200000000001</span>
     </button>
-    <div id="message_kq6Dd" class="test__message--single">FILENAME:XX
+    <div id="message_dTxxO" class="test__message--single">FILENAME:XX
 Expected
     <string>: Luke
 to equal
     <string>: luke</div>
 </div>
 
-<div class="test" id="test_BtjH8">
-    <button class="test__name test--passed u-full-width" onclick="cta.contract.local.test(this.parentElement)">
+<div class="test" id="test_FkTQA">
+    <button class="test__name test--passed u-full-width " onclick="cta.contract.local.test(this.parentElement)">
         <span class="u-pull-left">It Is A Pass</span>
         <span class="u-pull-right">0.000625</span>
     </button>
     
 </div>
 
-<div class="test" id="test_ma2ql">
-    <button class="test__name test--skipped u-full-width" onclick="cta.contract.local.test(this.parentElement)">
+<div class="test" id="test_qC9yB">
+    <button class="test__name test--skipped u-full-width flat" onclick="cta.contract.local.test(this.parentElement)">
         <span class="u-pull-left">It Is Skipped</span>
         <span class="u-pull-right">0</span>
     </button>
-    <div class="test__messages"><div id="message_9S6iE" class="test__message">This is a message</div>
-<div id="message_vSWEs" class="test__message">This is a message</div></div>
+    <div class="test__messages"><div id="message_ndRRh" class="test__message">This is a message</div>
+<div id="message_uLkcC" class="test__message">This is a message</div></div>
 </div>
 </div>
     </div>
 </div>
 </div>
-    <script type="text/javascript">var suites = [{"id":"suite_qX3L3","type":"failure","name":"Multi","time":"0.0160106","tests":"3","failures":"1","properties":[{"id":"properties_WUrXt","props":[{"name":"flag-type","value":"bug","id":"property_pGS16"},{"name":"flag-content","value":"APPLICATION DEFECT","id":"property_upQZa"},{"name":"Has a name","value":"true","id":"property_Hu0Sl"},{"name":"URL","value":"/hunter/overall_test.go","id":"property_M0Ord"}]},{"id":"properties_9T72a","props":[{"name":"even","value":"more","id":"property_19k7y"}]}],"testCases":[{"id":"test_9bSvb","time":"0.00075","name":"Is An Error","type":"error","messages":[{"id":"message_9rnX7","message":"java.lang.RuntimeException: There was an error"},{"id":"message_nSAr0","message":"java.lang.RuntimeException: There was an error"}]},{"id":"test_f9Pr4","time":"0.012011200000000001","name":"It Is A Failure","type":"failure","messages":[{"id":"message_kq6Dd","message":"FILENAME:XX\nExpected\n    <string>: Luke\nto equal\n    <string>: luke"}]},{"id":"test_BtjH8","time":"0.000625","name":"It Is A Pass","type":"passed"},{"id":"test_ma2ql","time":"0","name":"It Is Skipped","type":"skipped","messages":[{"id":"message_9S6iE","message":"This is a message"},{"id":"message_vSWEs","message":"This is a message"}]}]}]
+    <script type="text/javascript">var suites = [{"id":"suite_QRfv6","type":"failure","name":"Multi","time":"0.0160106","tests":"3","failures":"1","properties":[{"id":"properties_iMwIl","props":[{"name":"flag-type","value":"bug","id":"property_QUZ0Y"},{"name":"flag-content","value":"APPLICATION DEFECT","id":"property_3In56"},{"name":"Has a name","value":"true","id":"property_UmsHo"},{"name":"URL","value":"/hunter/overall_test.go","id":"property_e7RGX"}]},{"id":"properties_RRaAJ","props":[{"name":"even","value":"more","id":"property_vnbaP"}]}],"testCases":[{"id":"test_VLkDY","time":"0.00075","name":"Is An Error","type":"error","messages":[{"id":"message_acPzu","message":"java.lang.RuntimeException: There was an error"},{"id":"message_6bawB","message":"java.lang.RuntimeException: There was an error"}]},{"id":"test_a0vHr","time":"0.012011200000000001","name":"It Is A Failure","type":"failure","messages":[{"id":"message_dTxxO","message":"FILENAME:XX\nExpected\n    <string>: Luke\nto equal\n    <string>: luke"}]},{"id":"test_FkTQA","time":"0.000625","name":"It Is A Pass","type":"passed"},{"id":"test_qC9yB","time":"0","name":"It Is Skipped","type":"skipped","messages":[{"id":"message_ndRRh","message":"This is a message"},{"id":"message_uLkcC","message":"This is a message"}]}]}]
 function createToggleDisplay(by) {
     return function(element) {
         var isHidden = element.className.indexOf(' hide--' + by) !== -1
